crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_group_order_takes_precedence_over_kind_sort_order.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/classes/Engine.md =====
# Class: Engine

A class.

## Signature

```ts
export function Engine(): void
```
===== default/functions/alpha.md =====
# Function: alpha()

A function.

## Signature

```ts
export function alpha(): void
```
===== default/index.md =====
# default

Module description.

_4 symbols · 1 functions · 1 classes · 1 interfaces · 1 variables_

## Interfaces

- [Config](./interfaces/Config.md) - An interface.

## Functions

- [alpha](./functions/alpha.md) - A function.

## Classes

- [Engine](./classes/Engine.md) - A class.

## Variables

- [VERSION](./variables/VERSION.md) - A variable.

===== default/interfaces/Config.md =====
# Interface: Config

An interface.

## Signature

```ts
export function Config(): void
```
===== default/variables/VERSION.md =====
# Variable: VERSION

A variable.

## Signature

```ts
export function VERSION(): void
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 4 symbols · 1 functions · 1 classes · 1 interfaces · 1 variables_

## Modules

- [default](./default/index.md) - Module description.
