crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_dedups_structured_tags_from_tag_list.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/run.md =====
# Function: run()

<div id="run" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge ox-api-badge--warning">deprecated</span><span class="ox-api-badge">since 1.0.0</span></span>
<div class="ox-api-entry__prose">
<p>Run.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function run(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--tags">
<h4>Tags</h4>
<ul class="ox-api-entry__tags"><li><span class="ox-api-entry__tag-name">@see</span><span class="ox-api-entry__tag-value">related</span></li></ul>
</div>
</div>
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat ox-api-stat--warning">
  <strong>1</strong>
  <span>deprecated</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [run](./functions/run.md) | Run. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat ox-api-stat--warning">
  <strong>1</strong>
  <span>deprecated</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
