crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_links_known_symbols_in_types.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/functions/boolean.md =====
# Function: boolean()

<div id="boolean" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function boolean(): void</code></pre>
</div>
</div>
===== combinators/functions/number.md =====
# Function: number()

<div id="number" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function number(): void</code></pre>
</div>
</div>
===== combinators/functions/string.md =====
# Function: string()

<div id="string" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function string(): void</code></pre>
</div>
</div>
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>13</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>9</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [boolean](./functions/boolean.md) |  |
| [number](./functions/number.md) |  |
| [string](./functions/string.md) |  |

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Command](./interfaces/Command.md) | A command. |

## Type Aliases

| Type Alias | Description |
| ------ | ------ |
| [ArgExplicitlyProvided](./type-aliases/ArgExplicitlyProvided.md) |  |
| [ArgValues](./type-aliases/ArgValues.md) |  |
| [CommandRunner](./type-aliases/CommandRunner.md) |  |
| [DefaultGunshiParams](./type-aliases/DefaultGunshiParams.md) |  |
| [GunshiParamsConstraint](./type-aliases/GunshiParamsConstraint.md) |  |
| [PluginExtension](./type-aliases/PluginExtension.md) |  |
| [RenderingOptions](./type-aliases/RenderingOptions.md) |  |
| [SubCommandable](./type-aliases/SubCommandable.md) |  |
| [U](./type-aliases/U.md) |  |

===== combinators/interfaces/Command.md =====
# Interface: Command

<div id="command" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span>
<div class="ox-api-entry__prose">
<p>A command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Command(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="property-rendering">
  <td><code>rendering</code></td>
  <td><code class="ox-api-entry__member-type language-typescript"><a href="../type-aliases/RenderingOptions.md">RenderingOptions</a>&lt;G&gt;</code></td>
  <td></td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
===== combinators/type-aliases/ArgExplicitlyProvided.md =====
# Type Alias: ArgExplicitlyProvided

<div id="argexplicitlyprovided" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

<div id="argvalues" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/CommandRunner.md =====
# Type Alias: CommandRunner

<div id="commandrunner" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/DefaultGunshiParams.md =====
# Type Alias: DefaultGunshiParams

<div id="defaultgunshiparams" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/GunshiParamsConstraint.md =====
# Type Alias: GunshiParamsConstraint

<div id="gunshiparamsconstraint" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/PluginExtension.md =====
# Type Alias: PluginExtension

<div id="pluginextension" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/RenderingOptions.md =====
# Type Alias: RenderingOptions

<div id="renderingoptions" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/SubCommandable.md =====
# Type Alias: SubCommandable

<div id="subcommandable" class="ox-api-entry ox-api-entry--page">

</div>
===== combinators/type-aliases/U.md =====
# Type Alias: U

<div id="u" class="ox-api-entry ox-api-entry--page">

</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>13</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>9</strong>
  <span>types</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
